	- Added progress bar for Debian packages installation
	- Added engine hooks manager
	- Added several hooks in both addons and servers packages (still a lot to add...)
	- Fixed: iMSCP::IP - Ips stack not flushed on reset
	- Fixed: iMSCP::Boot - Do not create the imscp.conf file if do not exists, raise error instead
	- Refactoring + cs fixes + doc

GUI:
	Vendor:

	Tools:

Tickets:
	- Fixed #499: When deleting a domain alias, the custom DNS records (including those related to external mail
		server(s)) should be deleted
	- Fixed #500: Mail quota edit link has wrong id for alias, subdomain and aliassubs mails.
	- Fixed #503: Bug - DNS entries for subdomains are not re-added in db zone file
	- Fixed #504: Roundcube 0.8.2
	- Fixed #507: Cosmetics - External mail servers features status not show
	- Fixed #508: German Umlaut in Custom DNS were shown wrong
	- Fixed #509: Tools: PHPMyAdmin 3.5.3 released
	- Fixed #511: Enhancement - Show disk usage detail (web, mail, sql) on client side
	- Fixed #512: autoresponder: lines in transport file not correct
	- Fixed #514: Email forward from domain A to domain B not working
	- Fixed #522: Bug - Subdomain redirects with "https" or "ftp" don't work

-------------------------------------------------------------------------------------
i-MSCP 1.1.0-beta2
-------------------------------------------------------------------------------------

2012-09-14: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-beta2
	
Features / Enhancements / Bugfixes:

GUI:
	Vendor:
		- Updated Zend Framework to 1.11.12

	Tools:
		- Updated PhpMyAdmin to version 3.5.3
		- Updated Roundcube to 0.8.2

Tickets:
	- Fixed #433: PHP directive editor: register_globals does not exist in php 5.4.0 and above
	- Fixed #453: Wrong Support Ticket System Mailer template
	- Fixed #475: Some field-lengths are too short for their content
	- Fixed #479: WARNING 00_master_ssl.conf do not exists
	- Fixed #481: Fatal Error in create/edit custom DNS entry