@@ -122,8 +122,8 @@ unsetMessages();
 
 
 /**
- * @param $tpl
- * @param $edit_id
+ * @param iMSCP_pTemplate $tpl Template engine
+ * @param int $edit_id
  * @return void
  */
 function gen_editalias_page(&$tpl, $edit_id) {
@@ -199,34 +199,70 @@ function gen_editalias_page(&$tpl, $edit_id) {
 
 /**
  * Check input data
+ *
+ * @param iMSCP_pTemplate $tpl Template engine
+ * @param int $alias_id
+ * @return bool
  */
 function check_fwd_data($tpl, $alias_id) {
 
 	/** @var $cfg iMSCP_Config_Handler_File */
 	$cfg = iMSCP_Registry::get('config');
 
-	$forward_url = strtolower(clean_input($_POST['forward']));
-	$status = $_POST['status'];;
-	$admin_login = '';
-
 	if (isset($_POST['status']) && $_POST['status'] == 1) {
+
 		$forward_prefix = clean_input($_POST['forward_prefix']);
-		if (substr_count($forward_url, '.') <= 2) {
-			$ret = validates_dname($forward_url);
-		} else {
-			$ret = validates_dname($forward_url, true);
-		}
-		if (!$ret) {
-			set_page_message(tr('Wrong domain part in forward URL.'), 'error');
-		} else {
-			$forward_url = encode_idna($forward_prefix.$forward_url);
-		}
+		$forward = strtolower(clean_input($_POST['forward']));
+        $aurl = @parse_url($forward_prefix . $forward);
+
+        if ($aurl === false) {
+            set_page_message(tr('Wrong address in forward URL.'), 'error');
+        } else {
+            $domain = $aurl['host'];
+
+            if (substr_count($domain, '.') <= 2) {
+                $ret = validates_dname($domain);
+            } else {
+                $ret = validates_dname($domain, true);
+            }
+
+            if (!$ret) {
+                set_page_message(tr('Wrong domain part in forward URL.', 'error'));
+            } else {
+                $domain = encode_idna($aurl['host']);
+                $forward = $aurl['scheme'] . '://';
+
+                if (isset($aurl['user'])) {
+                    $forward .= $aurl['user'] . (isset($aurl['pass']) ? ':' . $aurl['pass'] : '') . '@';
+                }
+
+                $forward .= $domain;
+
+                if (isset($aurl['port'])) {
+                    $forward .= ':' . $aurl['port'];
+                }
+
+                if (isset($aurl['path'])) {
+                    $forward .= $aurl['path'];
+                } else {
+                    $forward .= '/';
+                }
+
+                if (isset($aurl['query'])) {
+                    $forward .= '?' . $aurl['query'];
+                }
+
+                if (isset($aurl['fragment'])) {
+                    $forward .= '#' . $aurl['fragment'];
+                }
+            }
+        }
 
 		$check_en = $cfg->HTML_CHECKED;
 		$check_dis = '';
 		$tpl->assign(
 			array(
-				'FORWARD'			=> tohtml($forward_url),
+				'FORWARD'			=> tohtml($forward),
 				'HTTP_YES'			=> ($forward_prefix === 'http://') ? $cfg->HTML_SELECTED : '',
 				'HTTPS_YES'			=> ($forward_prefix === 'https://') ? $cfg->HTML_SELECTED : '',
 				'FTP_YES'			=> ($forward_prefix === 'ftp://') ? $cfg->HTML_SELECTED : '',
@@ -239,7 +275,7 @@ function check_fwd_data($tpl, $alias_id) {
 	} else {
 		$check_en = '';
 		$check_dis = $cfg->HTML_CHECKED;
-		$forward_url = 'no';
+		$forward = 'no';
 		$tpl->assign(
 			array(
 				'READONLY_FORWARD' => $cfg->HTML_READONLY,
@@ -256,25 +292,10 @@ function check_fwd_data($tpl, $alias_id) {
 			iMSCP_Events::onBeforeEditDomainAlias, array('domainAliasId' => $alias_id)
 		);
 
-		$query = "
-			UPDATE
-				`domain_aliasses`
-			SET
-				`url_forward` = ?,
-				`alias_status` = ?
-			WHERE
-				`alias_id` = ?
-		";
-		exec_query($query, array($forward_url, $cfg->ITEM_CHANGE_STATUS, $alias_id));
+		$query = "UPDATE `domain_aliasses` SET `url_forward` = ?, `alias_status` = ? WHERE `alias_id` = ?";
+		exec_query($query, array($forward, $cfg->ITEM_CHANGE_STATUS, $alias_id));
 
-		$query = "
-			UPDATE
-				`subdomain_alias`
-			SET
-				`subdomain_alias_status` = ?
-			WHERE
-				`alias_id` = ?
-		";
+		$query = "UPDATE `subdomain_alias` SET `subdomain_alias_status` = ? WHERE `alias_id` = ?";
 		exec_query($query, array($cfg->ITEM_CHANGE_STATUS, $alias_id));
 
 		iMSCP_Events_Manager::getInstance()->dispatch(
