@@ -38,6 +38,7 @@ GUI:
 	Tools:
 
 Tickets:
+	- Fixed #482: Defect - Alias edit forward url not possible. Validation incorrect
 	- Fixed #499: When deleting a domain alias, the custom DNS records (including those related to external mail
 		server(s)) should be deleted
 	- Fixed #500: Mail quota edit link has wrong id for alias, subdomain and aliassubs mails.
